# raylib-mpeg2-example

./: CMakeLists.txt  README.md
data/: test.mpg
src/: main.c
